5.0a1 -> 5.0a2:
    - jbj: lib: identify and repair several minor flaws caught by splint.
    - jbj: rpmio: casts for integral conversions.
    - jbj: rpmio: casts for character <-> integral conversions.
    - jbj: first pass through header.c converting to uint32_t everywhere.
    - jbj: get rid of splint spew before chasing header.c integers.
    - jbj: use splint to check integral types, eliminate the easy stuff.
    - jbj: splint fiddles for rpmdb.
    - jbj: don't cache unsatisfied Suggests:.
    - jbj: fix the last memory leak with -Kvv, recheck install/query paths.
    - jbj: functional -Kvv *.xar header-only DSA verify.
    - jbj: disable tagTypeValidate on --addsig and --delsig paths.
    - jbj: remap rpmlog levels to status quo ante.
    - jbj: functional -Kvv *.xar header SHA1 and header+payload MD5 verify.
    - jbj: eliminate all but 1 of the memory leaks with -Kvv *.xar.
    - jbj: add he->signature tagTypeValidate disabler, sigtags no workie.
    - jbj: add (tenative) patch to handle cached chroot paths.
    - jbj: change %system to --with-xar=internal, adding xar_* to loader map.
    - jbj: hmmm, markReplacedFiles() breaks here, todo++. noone will notice.
    - jbj: eliminate headerGetEntryMinMemory(), use headerGet{Entry,Extension}.
    - jbj: invent pubkey/pubkey arch/os convention to avoid missing value pain.
    - jbj: use RPM_I18NSTRING_TYPE where needed for pubkey imports.
    - rse: relocate <stdint.h> usage to "system.h", too.
    - rse: relocate <inttypes.h> usage to "system.h" and add corresponding Autoconf check
    - rse: fix type mismatches between function prototype and function definitions related to uint64_t
    - rse: replace still existing u_int32_t with uint32_t to get building under Solaris
    - rse: remove warnings in rpmdb/dbconfig.c when building an SQLite-only RPM
    - rse: fix building against external Berkeley-DB under Solaris (where -lrt is required)